@@ -1,5 +1,5 @@
 /cache
-/kalamar.secret
+/kalamar.secret*
 /start-test
 /todo.org
 /fixtures.txt
